[package]
name = "endio"
version = "0.1.0"
authors = ["lcdr"]
edition = "2018"
description = "Simple reading & writing of binary data, extensible and ergonomic."
keywords = ["binary", "byte", "big-endian", "little-endian", "endian"]
categories = ["encoding", "parsing"]
readme = "README.md"
license = "AGPL-3.0-or-later"
repository = "https://github.com/lcdr/endio/"

[dependencies]
