[package]
name = "endio_derive"
version = "0.2.0"
authors = ["lcdr"]
edition = "2018"
description = "Derive macros for endio."
keywords = ["binary", "byte", "serialization", "deserialization", "endian"]
categories = ["encoding", "parsing"]
readme = "README.md"
license = "AGPL-3.0-or-later"
repository = "https://github.com/lcdr/endio/"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
